display, styling, and syntax highlighting of post content

--- a/content/blog/hello-world.mdx
+++ b/content/blog/hello-world.mdx
@@ -1,9 +1,13 @@
 ---
 title: Hello World
-descroption: This is our first blog post
+description: This is our first blog post yeah
 date: 2024-06-09
 published: true
 ---
+
+<Callout type="warning">
+Hello, I am a custome component Callout
+</Callout>
 
 # Hello World
 
